--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
             <artifactId>guava</artifactId>
             <version>23.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
                         
         
      </dependencies>    
