implementado o sobre do sistema.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ app.versao=Vers\u00E3o: 0.0.1-Release
 app.data=07/04/2019
 app.autor=1T(T) Anders
 app.divisao=DAbM-625
+app.ramal=2197-2543
+app.depto=Departamento de Inform\u00e1tica
+app.sistema=Sistema de Extra\u00e7\u00E3o e Tratamento de Dados
